--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   elixir:
-    image: elixir:latest
+    image: elixir:alpine
     container_name: elixir
     volumes:
       - .:/app
